third_party/WebKit/Source/WebCore/platform/graphics/texmap/TextureMapperGL.cpp
@@ -33,13 +33,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #if PLATFORM(QT)
 #if QT_VERSION >= QT_VERSION_CHECK(5, 0, 0)
+#include <QOpenGLContext>
 #include <QPlatformPixmap>
 #endif
 #endif
 
-#if defined(TEXMAP_OPENGL_ES_2)
-#include <EGL/egl.h>
-#elif OS(WINDOWS)
+#if OS(WINDOWS)
 #include <windows.h>
 #elif OS(MAC_OS_X)
 #include <AGL/agl.h>
@@ -73,11 +72,11 @@ inline static void debugGLCommand(const char* command, int line)
 
 struct TextureMapperGLData {
     struct SharedGLData : public RefCounted<SharedGLData> {
-#if defined(TEXMAP_OPENGL_ES_2)
-        typedef EGLContext GLContext;
+#if PLATFORM(QT) && (QT_VERSION >= QT_VERSION_CHECK(5, 0, 0))
+        typedef QOpenGLContext* GLContext;
         static GLContext getCurrentGLContext()
         {
-            return eglGetCurrentContext();
+            return QOpenGLContext::currentContext();
         }
 #elif OS(WINDOWS)
         typedef HGLRC GLContext;
